#345 Upgrade to OpenJDK 14 (#347)
* #345 Upgrade to OpenJDK 14